# shopee-qr-login

./: .gitignore  README.md  auto-py-to-exe.json  main.py  pyproject.toml  test.py
