[tool.poetry]
name = "shopee-login"
version = "0.1.0"
description = ""
authors = ["irfanykywz <irfanyouth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
